# agentos

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  package.json  pyproject.toml  run.sh
agentos/adapters/: vite_react.py
agentos/cli/: answers.py  classifier_migrate.py  coordinate.py  evaluator.py  executor.py  extensions.py  main.py  memory.py  metrics.py  startup_checker.py  web.py  webui_control.py
agentos/communicationos/: README.md  SECURITY_POLICY_GUIDE.md  SECURITY_QUICK_REF.md  TASK5_WHATSAPP_IMPLEMENTATION.md  __init__.py  audit.py  commands.py  dedupe.py  examples.py  manifest.py  models.py  registry.py  session_router.py  session_store.py
agentos/config/: loader.py  shadow_classifiers.yaml
agentos/context/: manager.py
agentos/core/: audit.py  config.py  database.py  security_audit.py
agentos/federation/: evidence_schema.py  mapping_rules.py  verification.py
agentos/jobs/: __init__.py  lead_scan.py  memory_gc.py
agentos/marketplace/: __init__.py  local_bootstrap.py  manifest_schema.py  publisher_trust.py  trust_inheritance.py
agentos/metrics/: README.md  __init__.py
agentos/networkos/: __init__.py
agentos/providers/: base.py  cloud_anthropic.py  cloud_config.py  cloud_openai.py  detector.py  local_llamacpp.py  local_lmstudio.py  local_ollama.py  ollama_controller.py  process_manager.py  providers_config.py  runtime.py
agentos/router/: persistence.py
agentos/schemas/: project.py
agentos/selfcheck/: runner.py
agentos/skills/: registry.py
agentos/store/: __init__.py  answers_store.py  content_store.py  migrations.py  migrator.py  timestamp_utils.py
agentos/tool/: dispatch.py  verify.py
agentos/webui/: agent2_monitor.py  app.py  daemon.py
apps/desktop-electron/: package.json
apps/webui/: playwright.config.ts
ci/github/: windows-installer.yml
configs/mode/: alert_config.json  default_policy.json  dev_policy.json  strict_policy.json
data/: mcp_registry.yaml
docs/: BREW_SPEC.md  EVIDENCE_BUNDLE.md  INSTALLER_SPEC.md  PATH_RULES.md  RELEASE_CHECKLIST.md  TEST_MATRIX.md  WEBUI_V1_TO_V2_MIGRATION.md  evidence_schema.json
docs/changelog/: index.json
evidence/token_optimization/: aggregate_report.json  cli_report.json  pytest_context_optimizer_pass.txt  tool_report.json  ui_report.json
evidence/token_optimization_v2/: aggregate_report.json  optimizer_proposals.json  se_report.json  v2_report.json
examples/: TASK_4_FINAL_SUMMARY.txt  agent_capability_authorization_demo.py  api_contract_usage.py  auth_profile_demo.py  autocomm_monitoring.py  budget_audit_demo.py  budget_config_demo.py  capability_audit_usage.py  capability_runner_demo.py  capability_usage_example.py  chat_communication_adapter_example.py  classifier_version_demo.py  cli_trace_usage.sh  comm_search_usage.md  communication_web_fetch_demo.py  conversation_mode_demo.py  decision_capabilities_demo.py  decision_comparator_demo.py  demo_coverage.py  demo_source_bridge.py  demo_task7_sync_api.py  dependency_detection_example.py  discord_client_demo.py  email_adapter_demo.py  email_channel_demo.py  gmail_provider_demo.py  golden_path_demo.py  guardian_demo.py  guards_demo.py  i18n_demo.py  idempotency_demo.py  improvement_proposal_demo.py  info_need_audit_demo.py  info_need_classifier_demo.py  info_need_memory_usage.py  info_need_metrics_demo.py  info_need_pattern_learning_demo.py  info_need_test_matrix_demo.py  knowledge_sources_demo.py  mcp_servers.yaml.example  (+34 more)
examples/demos/: demo_chat_auto_trigger.py  demo_providers_config_phase2.py  demo_work_items_serial.py
examples/dotnet-api/: Program.cs  README.md
examples/extensions/: ACCEPTANCE_CHECKLIST.md  README.md  TESTING_GUIDE.md  acceptance_test.py  create_extensions.py  demo_install_engine.py  e2e_acceptance_test.py  quick_demo.sh
examples/intents/: intent_example_full_auto_readonly.json  intent_example_high_risk_interactive.json  intent_example_low_risk.json
examples/manifests/: README.md
examples/multi-repo/: README.md
examples/nl/: nl_001.json  nl_001.yaml  nl_002.json  nl_002.yaml  nl_003.json  nl_003.yaml
examples/nl_requests/: nl_test_answerpack.txt
examples/rules/: rule_r01_no_execution.json  rule_r02_lineage_required.json  rule_r03_registry_only_references.json  rule_r04_no_fabrication_paths_commands.json  rule_r05_risk_escalation_cloud_model_required.json  rule_r06_question_budget_full_auto_zero.json  rule_r07_change_budget_required.json  rule_r08_write_effect_requires_review_state.json  rule_r09_evidence_refs_required_for_key_decisions.json  rule_r10_lock_scope_required_for_file_targets.json  rule_r11_audit_log_mandatory.json  rule_r12_rollback_plan_required_high_risk.json
examples/static-html/: contact.html  index.html  style.css
examples/teams_phase_b/: sample_usage.md
examples/test-html/: TEST_ADVANCED_FEATURES.md  TEST_CODE_HIGHLIGHTING.md  TEST_HTML_PREVIEW.md  TEST_PHASE4_FEATURES.md  test_chat_codeblock_integration.html  test_dialog_component.html  test_three_preset.html  test_toast.html
examples/vite-react/: README.md  package.json
examples/webui-tests/: test_all_dialogs.html  test_content_registry.html  test_decision_trace_viewer.html  test_execution_plans_view.html  test_floating_pet.html  test_floating_pet_drag_fix.html  test_governance_components.html  test_governance_dashboard.html  test_guardian_reviews_tab.html
examples/workflows/: architectural_evolution.json  code_review.json  deployment_planning.json  detailed_design.json  feature_implementation.json  implementation_planning.json  incident_response.json  knowledge_consolidation.json  maintenance_planning.json  performance_analysis.json  problem_discovery.json  refactoring.json  release_management.json  system_design.json  (+4 more)
memoryos/: README.md  SEARCH_GUIDE.md  __init__.py
octopusos/: __init__.py  bridgeos  communicationos  desktop_runtime_entry.py  device_store.py  networkos
policies/: sandbox_policy.json
scripts/: build_windows.ps1  smoke_windows.ps1
src/: README.md
webui-v2/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite-env.d.ts  vite.config.ts
(+2022 files in other folders)
